# AI-FIRST_HYBRID_3D_ENGINE_Rey30

./: .gitignore  AI-FIRST HYBRID 3D ENGINE_Lowcodding.txt  Cargo.toml  README.md  nuevas_Ideas.txt
ai/: Cargo.toml
ai/src/: audit.rs  command_bus.rs  config.rs  lib.rs  runtime.rs  tool_registry.rs  world_builder.rs
assets/: Cargo.toml
assets/src/: lib.rs
docs/: AI_HYBRID_MIN_SPEC.md  AI_SETUP.md  DECISIONS.md  IDEAS_IMPLEMENTATION_MAP.md  LOWCODE_MVP.md  SPRINT_10_11_BACKLOG.md  SPRINT_12_13_BACKLOG.md  SPRINT_14_15_BACKLOG.md  SPRINT_16_17_BACKLOG.md  SPRINT_18_19_20_BACKLOG.md  SPRINT_1_4_BACKLOG.md  SPRINT_21_BACKLOG.md  SPRINT_22_23_BACKLOG.md  SPRINT_24_25_BACKLOG.md  SPRINT_26_27_BACKLOG.md  SPRINT_5_BACKLOG.md  SPRINT_6_7_BACKLOG.md  SPRINT_8_9_BACKLOG.md  WOW_VERTICAL_SLICE.md
ecs/: Cargo.toml
ecs/src/: lib.rs
editor/: Cargo.toml
editor/src/: input.rs  main.rs
engine_core/: Cargo.toml
engine_core/src/: lib.rs
render/: Cargo.toml
render/src/: lib.rs
samples/: demo_scene.json  generated_scene.json
tools/: Cargo.toml
tools/src/: lib.rs
