[workspace]
members = [
    "engine_core",
    "render",
    "ecs",
    "editor",
    "assets",
    "tools",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
bevy_ecs = "0.15"
bytemuck = { version = "1.23", features = ["derive"] }
env_logger = "0.11"
glam = "0.29"
log = "0.4"
pollster = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
wgpu = "0.20"
winit = "0.29"
