[package]
name = "ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
assets = { path = "../assets" }
chrono.workspace = true
ecs = { path = "../ecs" }
log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
