[package]
name = "editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
assets = { path = "../assets" }
ecs = { path = "../ecs" }
engine_core = { path = "../engine_core" }
env_logger.workspace = true
log.workspace = true
pollster.workspace = true
render = { path = "../render" }
wgpu.workspace = true
winit.workspace = true
